[tool.poetry]
name = "penny-pincher"
version = "0.1.0"
description = ""
authors = ["Leo Kukharau <kuhorev.leonid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"
selenium = "^3.141.0"
django-crispy-forms = "^1.9.2"

[tool.poetry.dev-dependencies]
pylint-django = "^2.3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
