[tool.poetry]
name = "penny-pincher"
version = "0.1.0"
description = ""
authors = ["Leo Kukharau <kuhorev.leonid@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
django = "^3.1"
selenium = "^3.141.0"
django-crispy-forms = "^1.9.2"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
psycopg2 = "^2.8.5"
django-heroku = "^0.3.1"
django-q = "^1.3.2"
redis = "^3.5.3"
django-extensions = "^3.0.5"

[tool.poetry.dev-dependencies]
pylint-django = "^2.3.0"
autopep8 = "^1.5.4"
pygraphviz = "^1.6"
pyparsing = "^2.4.7"
pydot = "^1.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
